--- a/set.env
+++ b/set.env
@@ -6,40 +6,8 @@ BOT_NAME=rayan
 BOT_MENU_LINKS=https://telegra.ph/file/0533865bccc0d29ec2111.jpg
 PUBLIC_MODE=yes
 HEROKU=no
-DATABASE_URL=name: Node.js CI
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: npm install -g pm2 &&  npm install
-
-    - name: Start application
-      run: npm run zokou
-xWNER_NAME=Djalega++
+DATABASE_URL=postgresql://walter_7g7c_user:DFJ9laj9xaikMc3LRywR3yxfarpn6KXl@dpg-cqupcd3v2p9s73e4uik0-a.oregon-postgres.render.com/walter_7g7c
+xWNER_NAME=rayan
 NUMERO_OWNER=2250152383257
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=yes
